[User] Consultando usuario por DI